CHANGES
=======

* Always check dirs on setup
* Fixed spelling
* Added debugging when creating log dir
* Create log folder if it's not present
* changed setup to allow for bdist\_wheel
* Added clearer Defualt log paths
* changed handling versions
* Removed mixtt refrences (#5)
* Clean config files (#4)
* Cleaned up docker starting script (#3)
* Added LICENSE
* Refactor to athos (#2)
* fixed issue when thirft port argument is not being used
* Refactored and cleaned up parse config
* Started moving away from too many instance attributes
* Cleaned up formatting for pylint
* Cleaned up install script for docker build
* Removed old ping methods
* Added configuration and usage to readme
* Started on README documentation redo
* Added script to call urge from inside docker
* Added support for startup scripts before starting tests
* Added entrypoint that allows streaming to frontend
* Tidy up for new docker image
* Updated to use p4 in docker
* Cleaned up logging to work with mininet and write to file
* Fixed clash due to promethues using same port
* Fixed thrift\_port with multiple p4 switches
* Moved parse\_args to \_\_main\_\_
* Incorporate p4 switch
* Added a scapy switch to simulate p4 umbrella
* Added VLAN support, as well as multiple ifaces per host
* Rework config and added vlan support
* Added support for multiple connections from a host
* Added CLI and more ping flexibility
* Added better error checking in parser
* fixed openvswitch issues
* Fixed a word in gitgnore
* Updated gitignore
* Added parser and setup from wide setup
* Added script for ixpmanager and added dpid support
* Changed dockerfile to allow for standalone usage
* Automate docker build and running topology tester
* Added needed docker components
* Cleaned up code to allow for packaging for docker
* Added checker to validate config files
* Create README.md
* Initial commit